--- a/Static Website/day1/index.html
+++ b/Static Website/day1/index.html
@@ -5,10 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Day1</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Tourism</h1>
-    <p>Travel wherever you want</p>
+    <h1 class="h-center">Tourism</h1>
+    <p class="h-center">Travel wherever you want</p>
     <button>Get Started</button>
 </body>
 </html>
