container element added

--- a/Static Website/day1/index.html
+++ b/Static Website/day1/index.html
@@ -8,8 +8,11 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1 class="h-center">Tourism</h1>
-    <p class="h-center">Travel wherever you want</p>
-    <button>Get Started</button>
+    <div class="h-center">
+        <h1>Tourism</h1>
+        <p>Travel wherever you want</p>
+        <button>Get Started</button>
+    </div>
+    
 </body>
 </html>
