color background-color

--- a/Static Website/day1/index.html
+++ b/Static Website/day1/index.html
@@ -9,8 +9,8 @@
 </head>
 <body>
     <div class="h-center">
-        <h1>Tourism</h1>
-        <p>Travel wherever you want</p>
+        <h1 style="color: blue;">Tourism</h1>
+        <p class="paragraph">Travel wherever you want</p>
         <button>Get Started</button>
     </div>
     
