--- a/Static Website/day1/index.html
+++ b/Static Website/day1/index.html
@@ -8,8 +8,8 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="h-center">
-        <h1 style="color: blue;">Tourism</h1>
+    <div class="card">
+        <h1 style="color: blue;" class="main-heading">Tourism</h1>
         <p class="paragraph">Travel wherever you want</p>
         <button>Get Started</button>
     </div>
