--- a/Static Website/day1/index.html
+++ b/Static Website/day1/index.html
@@ -8,10 +8,12 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="card">
-        <h1 style="color: blue;" class="main-heading">Tourism</h1>
-        <p class="paragraph">Travel wherever you want</p>
-        <button>Get Started</button>
+    <div class="bg-container">
+        <div class="card">
+            <h1 style="color: blue;" class="main-heading">Tourism</h1>
+            <p class="paragraph">Travel wherever you want</p>
+            <button class="button">Get Started</button>
+        </div>
     </div>
     
 </body>
