advance tech coding practice done

--- a/Static Website/day2/Coding Practice 5/Advance Tech/index.html
+++ b/Static Website/day2/Coding Practice 5/Advance Tech/index.html
@@ -12,11 +12,15 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
 </head>
 <body>
-    <div class="bg-container d-flex flex-column justify-content-center">
-        <div class="text-container">
-            <h1 class="text-area">
-                Code is more than some bytes in a file
-            </h1>
+    <div class="bg-container d-flex flex-column justify-content-end">
+        <div class="tourism-card">
+            <h1 class="main-heading">Advance Technologies</h1>
+            <p class="paragraph">Machinery and equipment developed from the science knowledge</p>
+            <div class="btn-container">
+                <button class="first-btn">Learn More</button>
+                <button class="second-btn">Save Draft</button>
+            </div>
+            
         </div>
     </div>
     
