--- a/Static Website/day2/Coding Practice 4/index.html
+++ b/Static Website/day2/Coding Practice 4/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Day1</title>
+    <title>Day2</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
@@ -12,11 +12,11 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
 </head>
 <body>
-    <div class="bg-container d-flex flex-column justify-content-center">
-        <div class="text-container">
-            <h1 class="text-area">
-                Code is more than some bytes in a file
-            </h1>
+    <div class="bg-container d-flex flex-column justify-content-end">
+        <div class="food-card">
+            <h1 class="main-heading">Happy Meals</h1>
+            <p class="paragraph">Discover the best food over the 1,000 restaurents</p>
+            <button class="button">Book Now</button>
         </div>
     </div>
     
