Coding Practice 5 done

--- a/Responsive Website/day5/Coding Practice 5/VR Website Navbar & Banner Section/index.html
+++ b/Responsive Website/day5/Coding Practice 5/VR Website Navbar & Banner Section/index.html
@@ -17,17 +17,17 @@
   <nav class="navbar navbar-expand-lg navbar-light bg-white">
     <div class="container">
     <a class="navbar-brand" href="#">
-        <img class="logo1" src="https://d1tgh8fmlzexmh.cloudfront.net/ccbp-responsive-website/food-munch-logo-img.png" alt="">
+        <img class="logo1" src="https://d1tgh8fmlzexmh.cloudfront.net/ccbp-responsive-website/vr-logo-img.png" alt="">
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
       <div class="navbar-nav ml-auto">
-        <a class="nav-item nav-link active" id="custom-nav-link1" href="#">Why choose us? <span class="sr-only">(current)</span></a>
-        <a class="nav-item nav-link" id="custom-nav-link2" href="#">Explore Menu</a>
-        <a class="nav-item nav-link" id="custom-nav-link3" href="#">Delivery & Payment</a>
-        <a class="nav-item nav-link" id="custom-nav-link4" href="#">Follow us</a>
+        <a class="nav-item nav-link active" id="custom-nav-link1" href="#">Home <span class="sr-only">(current)</span></a>
+        <a class="nav-item nav-link" id="custom-nav-link2" href="#">Products</a>
+        <a class="nav-item nav-link" id="custom-nav-link3" href="#">Recent Blogs</a>
+        <a class="nav-item nav-link" id="custom-nav-link4" href="#">Delivery & Payment</a>
       </div>
     </div>
     </div>
@@ -36,16 +36,10 @@
   <div class="banner-section-bg-container d-flex flex-column justify-content-center">
     <div class="text-center">
         <h1 class="banner-heading mb-3">
-            Get Delicious food anytime
+            The revolution in virtual reality
         </h1>
-        <p class="banner-caption mb-4">
-            Eat smart & healthy
-        </p>
         <button class="custom-button">
             view menu
-        </button>
-        <button class="custom-button-outline">
-            order now
         </button>
     </div>
   </div>
