(why choose us) section done

--- a/Responsive Website/day5/Food Munch Responsive Website/index.html
+++ b/Responsive Website/day5/Food Munch Responsive Website/index.html
@@ -49,5 +49,38 @@
         </button>
     </div>
   </div>
+
+  <div class="wcu-section pt-5 pb-5">
+    <div class="container">
+      <div class="row">
+        <div class="col-12">
+          <h1 class="wcu-section-heading">Why choose us?</h1>
+          <p class="wcu-section-desc">We use both delicious and classic versions of famous food items</p>
+        </div>
+        <div class="col-12 col-md-4">
+          <div class="wcu-card p-3 mb-3">
+            <img src="https://d1tgh8fmlzexmh.cloudfront.net/ccbp-responsive-website/food-serve.png" class="wcu-card-image" alt="">
+            <h1 class="wcu-card-heading mt-3">Food Service</h1>
+            <p class="wcu-card-desc">Experience fine during the visiting. comfort of your home.</p>
+          </div>
+        </div>
+        <div class="col-12 col-md-4">
+          <div class="wcu-card p-3 mb-3">
+            <img src="https://d1tgh8fmlzexmh.cloudfront.net/ccbp-responsive-website/fruits-img.png" class="wcu-card-image" alt="">
+            <h1 class="wcu-card-heading mt-3">Fresh Food</h1>
+            <p class="wcu-card-desc">Experience fine during the visiting. comfort of your home.</p>
+          </div>
+        </div>
+        <div class="col-12 col-md-4">
+          <div class="wcu-card p-3 mb-3">
+            <img src="https://d1tgh8fmlzexmh.cloudfront.net/ccbp-responsive-website/offers-img.png" class="wcu-card-image" alt="">
+            <h1 class="wcu-card-heading mt-3">Best Offers</h1>
+            <p class="wcu-card-desc">Experience fine during the visiting. comfort of your home.<span class="offers">50% off</span></p>
+          </div>
+        </div>
+      
+      </div>
+    </div>
+  </div>
 </body>
 </html>
