--- a/Responsive Website/day5/Food Munch Responsive Website/index.html
+++ b/Responsive Website/day5/Food Munch Responsive Website/index.html
@@ -82,5 +82,90 @@
       </div>
     </div>
   </div>
+
+  <div class="explore-menu-section pt-5 pb-5">
+    <div class="container">
+      <div class="row">
+        <div class="col-12">
+          <h1 class="explore-menu-section-heading">Explore Menu</h1>
+        </div>
+
+        <div class="col-12 col-md-6 col-lg-3">
+          <div class="explore-menu-card shadow p-3 mb-3">
+            <img src="https://d1tgh8fmlzexmh.cloudfront.net/ccbp-responsive-website/em-ginger-fried-img.png" class="menu-card-image w-100" alt="">
+            <h1 class="menu-card-heading mt-3">Non Veg Startes</h1>
+            <a href="" class="menu-card-desc">View All<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="#d0b200" class="bi bi-arrow-right-short" viewBox="0 0 16 16">
+              <path fill-rule="evenodd" d="M1 8a.5.5 0 0 1 .5-.5h11.793l-3.147-3.146a.5.5 0 0 1 .708-.708l4 4a.5.5 0 0 1 0 .708l-4 4a.5.5 0 0 1-.708-.708L13.293 8.5H1.5A.5.5 0 0 1 1 8z"/>
+            </svg></a>
+          </div>
+        </div>
+        <div class="col-12 col-md-6 col-lg-3">
+          <div class="explore-menu-card shadow p-3 mb-3">
+            <img src="https://d1tgh8fmlzexmh.cloudfront.net/ccbp-responsive-website/em-veg-starters-img.png" class="menu-card-image w-100" alt="">
+            <h1 class="menu-card-heading mt-3">Veg Startes</h1>
+            <a href="" class="menu-card-desc">View All<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="#d0b200" class="bi bi-arrow-right-short" viewBox="0 0 16 16">
+              <path fill-rule="evenodd" d="M1 8a.5.5 0 0 1 .5-.5h11.793l-3.147-3.146a.5.5 0 0 1 .708-.708l4 4a.5.5 0 0 1 0 .708l-4 4a.5.5 0 0 1-.708-.708L13.293 8.5H1.5A.5.5 0 0 1 1 8z"/>
+            </svg></a>
+          </div>
+        </div>
+        <div class="col-12 col-md-6 col-lg-3">
+          <div class="explore-menu-card shadow p-3 mb-3">
+            <img src="https://d1tgh8fmlzexmh.cloudfront.net/ccbp-responsive-website/em-soup-img.png" class="menu-card-image w-100" alt="">
+            <h1 class="menu-card-heading mt-3">Soups</h1>
+            <a href="" class="menu-card-desc">View All<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="#d0b200" class="bi bi-arrow-right-short" viewBox="0 0 16 16">
+              <path fill-rule="evenodd" d="M1 8a.5.5 0 0 1 .5-.5h11.793l-3.147-3.146a.5.5 0 0 1 .708-.708l4 4a.5.5 0 0 1 0 .708l-4 4a.5.5 0 0 1-.708-.708L13.293 8.5H1.5A.5.5 0 0 1 1 8z"/>
+            </svg></a>
+          </div>
+        </div>
+        <div class="col-12 col-md-6 col-lg-3">
+          <div class="explore-menu-card shadow p-3 mb-3">
+            <img src="https://d1tgh8fmlzexmh.cloudfront.net/ccbp-responsive-website/em-grilled-seafood-img.png" class="menu-card-image w-100" alt="">
+            <h1 class="menu-card-heading mt-3">Fish & Sea food</h1>
+            <a href="" class="menu-card-desc">View All<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="#d0b200" class="bi bi-arrow-right-short" viewBox="0 0 16 16">
+              <path fill-rule="evenodd" d="M1 8a.5.5 0 0 1 .5-.5h11.793l-3.147-3.146a.5.5 0 0 1 .708-.708l4 4a.5.5 0 0 1 0 .708l-4 4a.5.5 0 0 1-.708-.708L13.293 8.5H1.5A.5.5 0 0 1 1 8z"/>
+            </svg></a>
+          </div>
+        </div>
+        <div class="col-12 col-md-6 col-lg-3">
+          <div class="explore-menu-card shadow p-3 mb-3">
+            <img src="https://d1tgh8fmlzexmh.cloudfront.net/ccbp-responsive-website/em-hyderabadi-biryani-img.png" class="menu-card-image w-100" alt="">
+            <h1 class="menu-card-heading mt-3">Main Course</h1>
+            <a href="" class="menu-card-desc">View All<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="#d0b200" class="bi bi-arrow-right-short" viewBox="0 0 16 16">
+              <path fill-rule="evenodd" d="M1 8a.5.5 0 0 1 .5-.5h11.793l-3.147-3.146a.5.5 0 0 1 .708-.708l4 4a.5.5 0 0 1 0 .708l-4 4a.5.5 0 0 1-.708-.708L13.293 8.5H1.5A.5.5 0 0 1 1 8z"/>
+            </svg></a>
+          </div>
+        </div>
+        <div class="col-12 col-md-6 col-lg-3">
+          <div class="explore-menu-card shadow p-3 mb-3">
+            <img src="https://d1tgh8fmlzexmh.cloudfront.net/ccbp-responsive-website/em-mushroom-noodles-img.png" class="menu-card-image w-100" alt="">
+            <h1 class="menu-card-heading mt-3">Noodles</h1>
+            <a href="" class="menu-card-desc">View All<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="#d0b200" class="bi bi-arrow-right-short" viewBox="0 0 16 16">
+              <path fill-rule="evenodd" d="M1 8a.5.5 0 0 1 .5-.5h11.793l-3.147-3.146a.5.5 0 0 1 .708-.708l4 4a.5.5 0 0 1 0 .708l-4 4a.5.5 0 0 1-.708-.708L13.293 8.5H1.5A.5.5 0 0 1 1 8z"/>
+            </svg></a>
+          </div>
+        </div>
+        <div class="col-12 col-md-6 col-lg-3">
+          <div class="explore-menu-card shadow p-3 mb-3">
+            <img src="https://d1tgh8fmlzexmh.cloudfront.net/ccbp-responsive-website/em-gluten-img.png" class="menu-card-image w-100" alt="">
+            <h1 class="menu-card-heading mt-3">Salads</h1>
+            <a href="" class="menu-card-desc">View All<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="#d0b200" class="bi bi-arrow-right-short" viewBox="0 0 16 16">
+              <path fill-rule="evenodd" d="M1 8a.5.5 0 0 1 .5-.5h11.793l-3.147-3.146a.5.5 0 0 1 .708-.708l4 4a.5.5 0 0 1 0 .708l-4 4a.5.5 0 0 1-.708-.708L13.293 8.5H1.5A.5.5 0 0 1 1 8z"/>
+            </svg></a>
+          </div>
+        </div>
+        <div class="col-12 col-md-6 col-lg-3">
+          <div class="explore-menu-card shadow p-3 mb-3">
+            <img src="https://d1tgh8fmlzexmh.cloudfront.net/ccbp-responsive-website/em-coffee-bourbon-img.png" class="menu-card-image w-100" alt="">
+            <h1 class="menu-card-heading mt-3">Desserts</h1>
+            <a href="" class="menu-card-desc">View All<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="#d0b200" class="bi bi-arrow-right-short" viewBox="0 0 16 16">
+              <path fill-rule="evenodd" d="M1 8a.5.5 0 0 1 .5-.5h11.793l-3.147-3.146a.5.5 0 0 1 .708-.708l4 4a.5.5 0 0 1 0 .708l-4 4a.5.5 0 0 1-.708-.708L13.293 8.5H1.5A.5.5 0 0 1 1 8z"/>
+            </svg></a>
+          </div>
+        </div>
+        
+      
+      </div>
+    </div>
+  </div>
 </body>
 </html>
