Coding Practice 7 done

--- a/Responsive Website/day6/Coding Practice 7/VR Website Contact UsSection/index.html
+++ b/Responsive Website/day6/Coding Practice 7/VR Website Contact UsSection/index.html
@@ -24,9 +24,7 @@
     <div class="cu-section p-5">
         <div class="container">
             <div class="row">
-                <div
-                    class="cu-card col-12 col-md-7 order-1 order-md-2 text-center d-flex flex-column justify-content-center">
-
+                <div class="cu-card col-12 col-md-7 order-1 order-md-2 text-center d-flex flex-column justify-content-center">
                     <h1 class="cu-section-heading mb-4">Virtually Anything is possible</h1>
                     <div class="d-md-none">
                         <img class="cu-section-img w-100"
