Portfolio Website Projects Section done

--- a/Responsive Website/day8/Coding Practice 11/Portfolio Website Projects Section/index.html
+++ b/Responsive Website/day8/Coding Practice 11/Portfolio Website Projects Section/index.html
@@ -13,6 +13,39 @@
     <script src="https://kit.fontawesome.com/2b1ae271ed.js" crossorigin="anonymous"></script>
 </head>
 <body>
-    
+    <div class="project-section p-5">
+        
+        <div class="container">
+            <div class="row">
+                <div class="col-12">
+                    <h3 class="small-heading">Portfolio</h3>
+                    <h1 class="main-heading">Projects I have done</h1>
+                </div>
+                <div class="col-12 col-md-6">
+                    <div class="project-card mb-2">
+                        <img src="https://d1tgh8fmlzexmh.cloudfront.net/ccbp-responsive-website/portfolio-project-1-img.png" class="w-100 project-img" alt="">
+                        <div class="p-3">
+                            <p>Web design</p>
+                            <h2 class="card-heading">Royal Grand Hotel</h2>
+                            <p>Royal Grand hotel is a simple static website. we can use this layout for building the other websites...</p>
+                            <a href=""><div class="a-color">Read more <i class="fas fa-arrow-right"></i></div></a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-12 col-md-6">
+                    <div class="project-card mb-2">
+                        <img src="https://d1tgh8fmlzexmh.cloudfront.net/ccbp-responsive-website/portfolio-project-2-img.png" class="w-100 project-img" alt="">
+                        <div class="p-3">
+                            <p>Web design</p>
+                            <h2 class="card-heading">Happy Meals</h2>
+                            <p>Royal Grand hotel is a simple static website. we can use this layout for building the other websites...</p>
+                            <a href=""><div class="a-color">Read more <i class="fas fa-arrow-right"></i></div></a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+    </div>
 </body>
 </html>
